--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@base-ui/react": "^1.1.0",
-    "@clerk/nextjs": "^6.37.3",
     "@radix-ui/react-checkbox": "^1.3.3",
     "airtable": "^0.12.2",
     "class-variance-authority": "^0.7.1",
@@ -35,6 +34,6 @@
     "shadcn": "^3.8.4",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5"
+    "typescript": "5.9.3"
   }
 }
