--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@base-ui/react": "^1.1.0",
+    "@clerk/nextjs": "^6.38.0",
     "@radix-ui/react-checkbox": "^1.3.3",
     "airtable": "^0.12.2",
     "class-variance-authority": "^0.7.1",
